--- a/FlashWizFE/app/src/main/res/values/strings.xml
+++ b/FlashWizFE/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">FlashWiz</string>
-    <string name="hello_world">Hello World</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_in">Sign In</string>
+
+    <!-- For Sign Up Page / Activity -->
+    <string name="go_to_sign_in">Already Have and account? Sign In</string>
+    <!-- For Sign In Page / Activity -->
+    <string name="go_to_sign_up">Don\'t Have and account? Sign Up</string>
 </resources>
